--- a/evm/Dockerfile
+++ b/evm/Dockerfile
@@ -7,7 +7,7 @@ RUN echo "@1inch:registry=https://registry.npmjs.org/" > "/root/.npmrc"
 
 # Install Node.js and pnpm
 RUN apt-get update && apt-get install -y curl ca-certificates gnupg \
- && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+ && curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
  && apt-get install -y nodejs \
  && npm i -g pnpm \
  && rm -rf /var/lib/apt/lists/*
@@ -22,5 +22,6 @@ RUN cd cross-chain-resolver-example && pnpm install --force
 # Then copy the rest
 COPY . .
 
-# (optional) build/test
-# RUN cd cross-chain-resolver-example && pnpm build
+WORKDIR /app/cross-chain-resolver-example
+
+RUN forge install --no-git
